efeito de clique nos botoes da home

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Mecanica"
         tools:targetApi="31">
         <activity
+            android:name=".ControleCaixaTela"
+            android:exported="false" />
+        <activity
             android:name=".SeeAllFuncionarios"
             android:exported="false" />
         <activity
